# ccai_jetbot_ros

./: .env.example  .gitignore  LICENSE  README.md
ccai_jetbot_patrol/: package.xml  setup.cfg  setup.py
ccai_jetbot_patrol/ccai_jetbot_patrol/: __init__.py  camera_node.py  depth_nav_node.py  jetbot_hardware_node.py  llm_control_node.py  locations.py  mission.py  ota_agent_node.py  patrol_node.py  telegram_bridge_node.py  tensorrt_yolo.py  vision_nav_node.py  vlm_client_node.py  web_chat_node.py
ccai_jetbot_patrol/config/: cyclonedds.xml  robot.yaml
ccai_jetbot_patrol/launch/: patrol.launch.py
ccai_jetbot_patrol/test/: test_mission.py
docs/: architecture.md  connectivity.md  docker_host_operations.md  hardware_jetbot.md  install_jetson.md  navigation_roadmap.md  operations.md  ota_manifest.example.json  vision_and_alerts.md
h200/: requirements.txt
scripts/: build_yolo_tensorrt_engine.sh  container_build.sh  container_fix_ros_apt_key.sh  container_run_patrol.sh  download_yolo_model.sh  host_camera_probe.sh  host_csi_mjpeg_server.py  host_csi_mjpeg_start.sh  host_csi_mjpeg_stop.sh  host_csi_probe.sh  host_docker_diag.sh  host_docker_logs.sh  host_docker_run.sh  host_docker_update.sh  host_fix_nvargus_daemon.sh  install_jetson_humble.sh  install_realsense_d435i.sh  run_patrol.sh  start_h200_vllm.sh  verify_yolo_tensorrt.sh
systemd/: ccai-jetbot.service
