<?xml version="1.0"?>
<package format="3">
  <name>ccai_jetbot_patrol</name>
  <version>0.1.0</version>
  <description>Autonomous patrol robot stack for Jetson Nano JetBot with ROS2 Humble and remote vLLM VLM inference.</description>
  <maintainer email="admin@example.com">CCAI JetBot Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclpy</depend>

  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-pip</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
